src/test/ui/associated-types/associated-types-path-2.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/associated-types-path-2.rs:19:5
   |
LL |     f1(2i32, 4i32);
   |     ^^^----^^^^^^^
   |        |
   |        expected `_`, found `i32`
   |
note: function defined here
  --> $DIR/associated-types-path-2.rs:13:8
   |
LL | pub fn f1<T: Foo>(a: T, x: T::A) {}
   |        ^^         ----  -------
help: provide an argument of the correct type
   |
LL |     f1(2i32, {u32});
   |     ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:29:5
   |
LL | pub fn f1<T: Foo>(a: T, x: T::A) {}
   |              --- required by this bound in `f1`
...
LL |     f1(2u32, 4u32);
   |     ^^ the trait `Foo` is not implemented for `u32`

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:29:5
   |
LL |     f1(2u32, 4u32);
   |     ^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `u32`

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:35:5
   |
LL | pub fn f1<T: Foo>(a: T, x: T::A) {}
   |              --- required by this bound in `f1`
...
LL |     f1(2u32, 4i32);
   |     ^^ the trait `Foo` is not implemented for `u32`

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:35:5
   |
LL |     f1(2u32, 4i32);
   |     ^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/associated-types-path-2.rs:41:18
   |
LL |     let _: i32 = f2(2i32);
   |            ---   ^^^^^^^^ expected `i32`, found `u32`
   |            |
   |            expected due to this
   |
help: you can convert a `u32` to an `i32` and panic if the converted value doesn't fit
   |
LL |     let _: i32 = f2(2i32).try_into().unwrap();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
